# MergeMesh

./: CMakeLists.txt  main.cpp
resources/: hockeypuck.off  straw.off
tetgen-master/: CMakeLists.txt
